# case-law-curator

./: .gitignore
backend/: pyproject.toml
backend/src/database/: database_core.py  opinion_table.py  postgresql.py  records_accessor.py
backend/src/schemas/: core_schema.py
backend/src/services/: text_chunking.py  text_parser.py
frontend/: package.json  pnpm-lock.yaml
